# gpx

./: AGENTS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
docs/: SPEC.md
src/: cli.rs  config.rs  doctor.rs  error.rs  gitops.rs  hooks.rs  list.rs  main.rs  output.rs  rules.rs  run.rs  sshops.rs  state.rs
templates/: config.template.toml
