[package]
name = "gpx-cli"
version = "0.1.0"
edition = "2024"
description = "Automatically switch Git and SSH identities by active profile."
repository = "https://github.com/waterlens/gpx"
homepage = "https://github.com/waterlens/gpx"
readme = "README.md"
license = "MIT"
keywords = ["git", "ssh", "profile", "identity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gpx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
gix-config = "0.53.0"
gix-discover = "0.48.0"
globset = "0.4.18"
indexmap = { version = "2.13.0", features = ["serde"] }
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
thiserror = "2.0.18"
toml = "1.0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
